--- a/Prelim_Act4.html
+++ b/Prelim_Act4.html
@@ -21,9 +21,8 @@
 			</div>
 			<br><br><br><br><br><br>
 		</div>
-		
 		<h1 id="GoToTop">My Top 10 Favorite Movies</h1>	
-		<div style="margin:0 40px 0 20px; background-color:#0F292F"> 
+		<div class="div-start"> 
 			<ol>
 				<table style="margin:20px;">
 					<tr>	
@@ -91,9 +90,7 @@ Uproarious, addictive, and filled with jaw-dropping opulence, Crazy Rich Asians 
 					
 				</table>																							
 			</ol>	
-		</div>
-		
-			
+		</div>			
 			
 			
 		</body>
