--- a/Prelim_Act4.html
+++ b/Prelim_Act4.html
@@ -3,7 +3,8 @@
 	<head>
 	<meta charset="utf-8 charset">
 	<title>My Top 10 Favorite Movies</title>
-
+	<link rel="icon" href="logo.png" type="image/x-icon"> 
+		
 	<body class="body-one"> 
         <link rel="stylesheet" type="text/css" href="Design.css">
 		<div class="first">
